ajuste no repository, e histroico
antes usava tolist, q era imutavel, agora usa collectors.tolist, que faz um arraylist mutavel